[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
license = "MIT/Apache-2.0"
name = "cu"
version = "0.1.0"

[dependencies]
rlibc = "1.0.0"
rustc_builtins = { git = "https://github.com/japaric/rustc-builtins" }

[profile.dev]
panic = "abort"

[profile.release]
lto = true
panic = "abort"
